// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render List page 1`] = `
<Page
  navModel={
    Object {
      "main": Object {
        "text": "Configuration",
      },
      "node": Object {
        "text": "Users",
      },
    }
  }
>
  <PageContents
    isLoading={false}
  >
    <Connect(UsersActionBar)
      onShowInvites={[Function]}
      showInvites={false}
    />
    <VerticalGroup
      spacing="md"
    >
      <UsersTable
        onRemoveUser={[Function]}
        onRoleChange={[Function]}
        users={Array []}
      />
      <HorizontalGroup
        justify="flex-end"
      >
        <Pagination
          currentPage={1}
          hideWhenSinglePage={true}
          numberOfPages={0}
          onNavigate={[MockFunction]}
        />
      </HorizontalGroup>
    </VerticalGroup>
  </PageContents>
</Page>
`;

exports[`Render should render component 1`] = `
<Page
  navModel={
    Object {
      "main": Object {
        "text": "Configuration",
      },
      "node": Object {
        "text": "Users",
      },
    }
  }
>
  <PageContents
    isLoading={true}
  >
    <Connect(UsersActionBar)
      onShowInvites={[Function]}
      showInvites={false}
    />
  </PageContents>
</Page>
`;
